Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 4.5.2
-
Component/s: Widgets: Itemviews
-
Labels:None
-
Commits:Qt 4:31015df188e0a88317205b212f317302a235cb9b Qt 5:a761be2fb2191215426f904cb03df0e966214531
Description
QListView: When wordwrapping is set and in icon mode then text is wrapped to the width of the icon even if a grid size is set.
Example to reproduce is attached as listwidget.zip and a suggested (yet untested and unverified) patch is attached as patch.diff.
Attachments
For Gerrit Dashboard: QTBUG-4714 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71477,2 | Correct wordwrapped text handling in QListView icon mode | stable | qt/qtbase | Status: MERGED | +2 | 0 |
75460,1 | Correct wordwrapped text handling in QListView icon mode | 4.8 | qt/qt | Status: MERGED | +2 | 0 |