src/gui/itemviews/qlistview.cpp
@@ -939,6 +939,11 @@ QStyleOptionViewItem QListView::viewOptions() const
     } else {
         option.decorationPosition = QStyleOptionViewItem::Left;
     }
+
+    if (d->gridSize().isValid()) {
+        option.rect.setSize(d->gridSize());
+    }
+
     return option;
 }
 
